# ycmcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  mcp_server.py  pyproject.toml  test_server.py
src/yandex_cloud_mcp/: __init__.py  compute.py  config.py  credentials.py  network.py  resource_manager.py  server.py  storage.py
