[project]
name = "yandex-cloud-mcp"
version = "0.1.0"
description = "MCP server for Yandex Cloud resource management"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.0",
    "yandexcloud>=0.298.0",
    "grpcio>=1.67.0",
    "grpcio-status>=1.67.0",
]

[project.scripts]
yandex-cloud-mcp = "yandex_cloud_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
